--- a/backend/bin/build
+++ b/backend/bin/build
@@ -8,6 +8,7 @@ $p src/aux.sql
 $p src/entities.sql
 $p src/api-meta.sql
 $p src/api-document.sql
+$p src/fts-facets.sql
 $p src/examine.sql
 $p src/debug.sql
 
