Install Elm 0.19 as npm dev dependency (plus elm-format, elm-live)
This configuration provides local Elm binaries.

We use npm here because it's just a quick and well-known way to
install Elm development tools.
Beside from that there is currently no necessary to use npm.

You can as well use binaries (elm, elm-live, elm-format) installed
elsewhere.

--- a/frontend/bin/build
+++ b/frontend/bin/build
@@ -9,11 +9,11 @@ graphqelm http://localhost:5000/graphql --base Graphql --output gen/
 
 # Prepare a clean build.
 rm -rf elm-stuff/build-artifacts
-elm package install --yes
+bin/elm package install --yes
 
 # Apply patch necessary for integration with chromium's "Redux DevTools Extension"
 # https://github.com/utkarshkukreti/elm-remotedev
 patch --strip=0 --forward <patch-elm-remotedev
 
 # Compile the Elm code
-elm make --output=elm.js src/Main.elm
+bin/elm make --output=elm.js src/Main.elm
