With Eml 0.19 the tool and library graphqelm is now elm-graphql
Upgrade guide from the author dillonkearns:
https://github.com/dillonkearns/elm-graphql/blob/master/docs/elm-19-upgrade.md

--- a/frontend/bin/build
+++ b/frontend/bin/build
@@ -5,7 +5,7 @@
 # https://github.com/dillonkearns/graphqelm
 
 rm -rf gen
-graphqelm http://localhost:5000/graphql --base Graphql --output gen/
+bin/elm-graphql http://localhost:5000/graphql --base Graphql --output gen/
 
 # Prepare a clean build.
 rm -rf elm-stuff/build-artifacts
