--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/ThomasWeiser/mediatum-view#readme",
   "devDependencies": {
+    "@dillonkearns/elm-graphql": "^1.0.4",
     "elm": "^0.19.0-bugfix2",
     "elm-format": "^0.8.1",
     "elm-live": "^3.1.0"
