--- a/frontend/bin/build
+++ b/frontend/bin/build
@@ -9,11 +9,11 @@ bin/elm-graphql http://localhost:5000/graphql --base Graphql --output gen/
 
 # Prepare a clean build.
 rm -rf elm-stuff/build-artifacts
-bin/elm package install --yes
 
 # Apply patch necessary for integration with chromium's "Redux DevTools Extension"
 # https://github.com/utkarshkukreti/elm-remotedev
-patch --strip=0 --forward <patch-elm-remotedev
+# 2018-10-12: elm-remotedev is currently not available for Elm 0.19
+# patch --strip=0 --forward <patch-elm-remotedev
 
 # Compile the Elm code
 bin/elm make --output=elm.js src/Main.elm
