Upgrade code to Elm 0.19
Some references:
https://github.com/elm/compiler/blob/master/upgrade-docs/0.19.md
https://korban.net/posts/elm/2018-08-22-elm-019-whats-new-install-upgrade/

--- a/frontend/bin/build
+++ b/frontend/bin/build
@@ -16,4 +16,4 @@ rm -rf elm-stuff/build-artifacts
 # patch --strip=0 --forward <patch-elm-remotedev
 
 # Compile the Elm code
-bin/elm make --output=elm.js src/Main.elm
+bin/elm make --output=elm.js --optimize src/Main.elm
