--- a/frontend/bin/build
+++ b/frontend/bin/build
@@ -16,4 +16,4 @@ rm -rf elm-stuff/build-artifacts
 # patch --strip=0 --forward <patch-elm-remotedev
 
 # Compile the Elm code
-bin/elm make --output=build/elm.js --optimize src/Main.elm
+bin/elm make --output=build/elm.js src/Main.elm # --optimize 
