Expose fn api.set_document_attribute as an exemplary GraphQL mutation

--- a/backend/bin/build
+++ b/backend/bin/build
@@ -10,6 +10,7 @@ $p src/api-meta.sql
 $p src/api-document.sql
 $p src/api-fts.sql
 $p src/api-facets.sql
+$p src/api-mutation.sql
 $p src/examine.sql
 $p src/debug.sql
 
