--- a/backend/bin/build
+++ b/backend/bin/build
@@ -7,6 +7,7 @@ $p src/types.sql
 $p src/aux.sql
 $p src/entities.sql
 $p src/api-meta.sql
+$p src/api-folder.sql
 $p src/api-document.sql
 $p src/api-fts.sql
 $p src/api-facets.sql
