Build Elm code directly into assets/app.js
This way we don't need a symbolic link from assets/app.js to
build/app.js, which is more convenient for building on Windows platform.

--- a/frontend/bin/build
+++ b/frontend/bin/build
@@ -16,4 +16,4 @@ rm -rf elm-stuff/build-artifacts
 # patch --strip=0 --forward <patch-elm-remotedev
 
 # Compile the Elm code
-bin/elm make --output=build/app.js src/Main.elm # --optimize 
+bin/elm make --output=assets/app.js src/Main.elm # --optimize 
