Proxy API requests through local URL
Use elm-live to proxy the API, so that the URL `/graphql` is used
to access the GraphQL backend at http://localhost:5000/graphql.

This makes it easier to run the API and the HTTP server on separate
hosts without the need to configure CORS headers.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "generate": "rimraf gen && elm-graphql http://localhost:5000/graphql --base Graphql --output gen/",
     "compile": "rimraf elm-stuff/build-artifacts && elm make --output=assets/app.js src/Main.elm",
     "build": "npm run generate && npm run compile",
-    "start": "elm-live -u -e node_modules/.bin/elm -d assets src/Main.elm -- --output=assets/app.js --debug",
+    "start": "elm-live -u -e node_modules/.bin/elm -d assets src/Main.elm -x /graphql -y http://localhost:5000 -- --output=assets/app.js --debug",
     "format": "elm-format --yes src",
     "clean": "rimraf gen elm-stuff assets/app.js"
   },
