New filename auxiliary.sql.
Windows doesn't like a file to be named aux.*

--- a/backend/bin/build
+++ b/backend/bin/build
@@ -4,7 +4,7 @@ p="psql -d mediatum_tu_prod_1 -U mediatum -f"
 
 $p src/drop_all.sql
 $p src/types.sql
-$p src/aux.sql
+$p src/auxiliary.sql
 $p src/entities.sql
 $p src/api-node.sql
 $p src/api-meta.sql
