--- a/backend/modd.conf
+++ b/backend/modd.conf
@@ -4,7 +4,7 @@
 src/types.sql {
   prep: clear
   prep: @psql src/types.sql
-  prep: @psql src/aux.sql
+  prep: @psql src/auxiliary.sql
   prep: @psql src/entities.sql
   prep: @psql src/api-meta.sql
   prep: @psql src/api-document.sql
