Use environment variables for configuring database access

--- a/backend/modd.conf
+++ b/backend/modd.conf
@@ -1,5 +1,5 @@
 
-@psql = psql -d mediatum_tu_prod_1 -U mediatum -f
+@psql = psql -d $MEDIATUM_DATABASE_NAME -U $MEDIATUM_DATABASE_USER -f
 
 src/types.sql {
   prep: clear
