--- a/backend/bin/build
+++ b/backend/bin/build
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-p="psql -d mediatum_tu_prod_1 -U mediatum -f"
+p="psql -d $MEDIATUM_DATABASE_NAME -U $MEDIATUM_DATABASE_USER -f"
 
 $p src/drop_all.sql
 $p src/types.sql
