--- a/backend/bin/build
+++ b/backend/bin/build
@@ -1,6 +1,8 @@
 #!/bin/sh
 
-p="psql -d $MEDIATUM_DATABASE_NAME -U $MEDIATUM_DATABASE_USER -f"
+set -e # Abort execution on first failing command
+
+p="psql -d $MEDIATUM_DATABASE_NAME -U $MEDIATUM_DATABASE_USER  -v ON_ERROR_STOP=on -f"
 
 $p src/drop_all.sql
 $p src/types.sql
