--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,10 +32,12 @@
   },
   "homepage": "https://github.com/ThomasWeiser/mediatum-view#readme",
   "devDependencies": {
-    "@dillonkearns/elm-graphql": "^3.4.0",
-    "elm": "^0.19.0-bugfix6",
+    "@dillonkearns/elm-graphql": "^3.6.2",
     "elm-format": "^0.8.1",
-    "elm-live": "^3.4.0",
+    "elm-live": "^3.4.1",
     "rimraf": "^2.6.3"
+  },
+  "dependencies": {
+    "elm": "^0.19.0-no-deps"
   }
 }
