--- a/backend/bin/build
+++ b/backend/bin/build
@@ -4,17 +4,17 @@ set -e # Abort execution on first failing command
 
 p="psql -d $MEDIATUM_DATABASE_NAME -U $MEDIATUM_DATABASE_USER  -v ON_ERROR_STOP=on -f"
 
-$p src/drop_all.sql
-$p src/types.sql
-$p src/auxiliary.sql
-$p src/entities.sql
-$p src/api-node.sql
-$p src/api-meta.sql
-$p src/api-folder.sql
-$p src/api-document.sql
-$p src/api-fts.sql
-$p src/api-facets.sql
-$p src/api-mutation.sql
-$p src/examine.sql
-$p src/debug.sql
+$p src/sql/drop_all.sql
+$p src/sql/types.sql
+$p src/sql/auxiliary.sql
+$p src/sql/entities.sql
+$p src/sql/api-node.sql
+$p src/sql/api-meta.sql
+$p src/sql/api-folder.sql
+$p src/sql/api-document.sql
+$p src/sql/api-fts.sql
+$p src/sql/api-facets.sql
+$p src/sql/api-mutation.sql
+$p src/sql/examine.sql
+$p src/sql/debug.sql
 
