--- a/backend/modd.conf
+++ b/backend/modd.conf
@@ -1,18 +1,18 @@
 
 @psql = psql -d $MEDIATUM_DATABASE_NAME -U $MEDIATUM_DATABASE_USER -f
 
-src/types.sql {
+src/sql/types.sql {
   prep: clear
-  prep: @psql src/types.sql
-  prep: @psql src/auxiliary.sql
-  prep: @psql src/entities.sql
-  prep: @psql src/api-meta.sql
-  prep: @psql src/api-document.sql
-  prep: @psql src/examine.sql
-  prep: @psql src/debug.sql
+  prep: @psql src/sql/types.sql
+  prep: @psql src/sql/auxiliary.sql
+  prep: @psql src/sql/entities.sql
+  prep: @psql src/sql/api-meta.sql
+  prep: @psql src/sql/api-document.sql
+  prep: @psql src/sql/examine.sql
+  prep: @psql src/sql/debug.sql
 }
 
-"src/{aux,entities,api-meta,api-document,examine,debug}.sql" {
+"src/sql/{aux,entities,api-meta,api-document,examine,debug}.sql" {
   prep +onchange: clear
   prep +onchange: echo @mods | xargs -n 1 @psql 
 }
