--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "rimraf gen && elm-graphql http://localhost:5000/graphql --base Mediatum --output gen/",
-    "compile": "rimraf elm-stuff/build-artifacts && elm make --output=assets/app.js src/Main.elm",
+    "compile": "rimraf elm-stuff/build-artifacts && elm make --output=assets/app.js src/elm/Main.elm",
     "build": "npm run generate && npm run compile",
-    "start": "elm-live -u -e node_modules/.bin/elm -d assets src/Main.elm -x /graphql -y http://localhost:5000 -- --output=assets/app.js --debug",
-    "format": "elm-format --yes src",
+    "start": "elm-live -u -e node_modules/.bin/elm -d assets src/elm/Main.elm -x /graphql -y http://localhost:5000 -- --output=assets/app.js --debug",
+    "format": "elm-format --yes src/elm",
     "clean": "rimraf gen elm-stuff assets/app.js"
   },
   "repository": {
