--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Web app as a client for the GraphQL API of mediaTUM",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "elm-test",
+    "test-watch": "elm-test --watch",
     "generate": "rimraf gen && elm-graphql http://localhost:5000/graphql --base Mediatum --output gen/",
     "compile": "rimraf elm-stuff/build-artifacts && ncp src/assets dist && elm make --output=dist/app.js src/elm/Main.elm",
     "build": "npm run generate && npm run compile",
@@ -35,8 +36,9 @@
     "@dillonkearns/elm-graphql": "^3.6.2",
     "elm-format": "^0.8.1",
     "elm-live": "^3.4.1",
-    "rimraf": "^2.6.3",
-    "ncp": "^2.0.0"
+    "elm-test": "^0.19.0-rev6",
+    "ncp": "^2.0.0",
+    "rimraf": "^2.6.3"
   },
   "dependencies": {
     "elm": "^0.19.0-no-deps"
