--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,13 +34,13 @@
   "homepage": "https://github.com/ThomasWeiser/mediatum-view#readme",
   "devDependencies": {
     "@dillonkearns/elm-graphql": "^3.6.2",
-    "elm-format": "^0.8.1",
+    "elm-format": "^0.8.2",
     "elm-live": "^3.4.1",
-    "elm-test": "^0.19.0-rev6",
+    "elm-test": "^0.19.1",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.3"
   },
   "dependencies": {
-    "elm": "^0.19.0-no-deps"
+    "elm": "^0.19.1-3"
   }
 }
