--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "compile": "rimraf elm-stuff/build-artifacts && ncp src/assets dist && elm make --output=dist/app.js src/elm/Main.elm",
     "build": "npm run generate && npm run compile",
     "start": "ncp src/assets dist && elm-live -u -e node_modules/.bin/elm -d dist src/elm/Main.elm -x /graphql -y http://localhost:5000 -- --output=dist/app.js --debug",
-    "format": "elm-format --yes src/elm",
+    "format": "elm-format --yes src/elm tests",
     "clean": "rimraf gen elm-stuff"
   },
   "repository": {
