--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -3,6 +3,7 @@
     "summary": "Alternative API and client for mediaTUM ",
     "version": "1.0.0",
     "exposed-modules": [
+        "Main",
         "Cache"
     ]
 }
