--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -4,6 +4,7 @@
     "version": "1.0.0",
     "exposed-modules": [
         "Main",
+        "App",
         "Cache",
         "Types.DebugInfo"
     ]
