--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -3,11 +3,50 @@
     "summary": "Alternative API and client for mediaTUM ",
     "version": "1.0.0",
     "exposed-modules": [
-        "Main",
+        "Api.Arguments.AttributeTest",
+        "Api.Arguments.Filter",
+        "Api.Fragments",
+        "Api.Mutations",
+        "Api.Queries",
+        "Api",
         "App",
+        "Cache.Derive",
         "Cache",
-        "UI",
         "Config",
-        "Types.DebugInfo"
+        "Entities.Document",
+        "Entities.Folder",
+        "Entities.FolderCounts",
+        "Entities.GenericNode",
+        "Entities.Results",
+        "Main",
+        "Pagination.Offset.Page",
+        "Pagination.Relay.Connection",
+        "Pagination.Relay.Page",
+        "Pagination.Relay.Pagination",
+        "Types.DebugInfo",
+        "Types.Id",
+        "Types.Navigation",
+        "Types.Presentation",
+        "Types.Range",
+        "Types.Route.Filter",
+        "Types.Route.Url",
+        "Types.Route",
+        "Types.SearchTerm",
+        "Types.Selection",
+        "Types",
+        "UI.Article.Collection",
+        "UI.Article.Details",
+        "UI.Article.Generic",
+        "UI.Article.Listing",
+        "UI.Article",
+        "UI.Controls.Filter",
+        "UI.Controls.FilterEditor",
+        "UI.Controls",
+        "UI.Icons",
+        "UI.Tree",
+        "UI",
+        "Utils.Graphql",
+        "Utils.Html",
+        "Utils"
     ]
 }
