Extract generic code from Cache into Types.Needs

--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -26,6 +26,7 @@
         "Types.DebugInfo",
         "Types.Id",
         "Types.Navigation",
+        "Types.Needs",
         "Types.Presentation",
         "Types.Range",
         "Types.Route.Filter",
