Add new modules to elm-application.json

--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -14,16 +14,17 @@
         "Cache",
         "Config",
         "Entities.Document",
+        "Entities.DocumentResults",
         "Entities.Folder",
         "Entities.FolderCounts",
         "Entities.GenericNode",
-        "Entities.DocumentResults",
         "Main",
         "Pagination.Offset.Page",
         "Pagination.Relay.Connection",
         "Pagination.Relay.Page",
         "Pagination.Relay.Pagination",
         "Types.DebugInfo",
+        "Types.Facet",
         "Types.Id",
         "Types.Navigation",
         "Types.Needs",
