Update elm-live from 3.4.1 to 4.0.2
The former version has some incompatibility in its npm dependencies.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "generate": "rimraf gen && elm-graphql http://localhost:5000/graphql --base Mediatum --output gen/",
     "compile": "rimraf elm-stuff && ncp src/assets dist && elm make --output=dist/app.js src/elm/Main.elm",
     "build": "npm run generate && npm run compile",
-    "start": "ncp src/assets dist && elm-live -u -e node_modules/.bin/elm -d dist src/elm/Main.elm -x /graphql -y http://localhost:5000 -- --output=dist/app.js --debug",
+    "start": "ncp src/assets dist && elm-live -u -e node_modules/.bin/elm -d dist src/elm/Main.elm -x /graphql -y http://localhost:5000/graphql -- --output=dist/app.js --debug",
     "format": "elm-format --yes src/elm tests",
     "doc-preview": "elm-doc-preview --port 8001 --no-browser .",
     "clean": "rimraf gen elm-stuff"
@@ -37,7 +37,7 @@
     "@dillonkearns/elm-graphql": "^4.0.0",
     "elm-doc-preview": "^3.0.4",
     "elm-format": "^0.8.2",
-    "elm-live": "^3.4.1",
+    "elm-live": "^4.0.2",
     "elm-test": "^0.19.1",
     "ncp": "^2.0.0",
     "rimraf": "^3.0.0"
