--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,15 +34,13 @@
   },
   "homepage": "https://github.com/ThomasWeiser/mediatum-view#readme",
   "devDependencies": {
-    "@dillonkearns/elm-graphql": "^4.0.0",
-    "elm-doc-preview": "^3.0.4",
-    "elm-format": "^0.8.2",
     "elm-live": "^4.0.2",
-    "elm-test": "^0.19.1",
-    "ncp": "^2.0.0",
-    "rimraf": "^3.0.0"
+    "elm-test": "^0.19.1"
   },
   "dependencies": {
-    "elm": "^0.19.1-3"
+    "@dillonkearns/elm-graphql": "^4.0.0",
+    "elm": "^0.19.1-3",
+    "ncp": "^2.0.0",
+    "rimraf": "^3.0.0"
   }
 }
