--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,12 +35,12 @@
   "homepage": "https://github.com/ThomasWeiser/mediatum-view#readme",
   "devDependencies": {
     "elm-live": "^4.0.2",
-    "elm-test": "^0.19.1"
+    "elm-test": "^0.19.1-revision2"
   },
   "dependencies": {
-    "@dillonkearns/elm-graphql": "^4.0.0",
+    "@dillonkearns/elm-graphql": "^4.0.3",
     "elm": "^0.19.1-3",
     "ncp": "^2.0.0",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.2"
   }
 }
