--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
   "homepage": "https://github.com/ThomasWeiser/mediatum-view#readme",
   "devDependencies": {
     "elm-live": "^4.0.2",
-    "elm-test": "^0.19.1-revision2"
+    "elm-test": "^0.19.1-revision2",
+    "elm-tooling": "^0.4.1"
   },
   "dependencies": {
     "@dillonkearns/elm-graphql": "^4.0.3",
