--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -18,6 +18,7 @@
         "Entities.Folder",
         "Entities.FolderCounts",
         "Entities.GenericNode",
+        "Entities.Residence",
         "Main",
         "Pagination.Offset.Page",
         "Pagination.Relay.Connection",
@@ -44,6 +45,7 @@
         "UI.Controls.Filter",
         "UI.Controls.FilterEditor",
         "UI.Controls",
+        "UI.Facets",
         "UI.Icons",
         "UI.Tree",
         "UI",
