--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/ThomasWeiser/mediatum-view#readme",
   "devDependencies": {
+    "elm-doc-preview": "^5.0.3",
     "elm-live": "^4.0.2",
     "elm-test": "^0.19.1-revision2",
     "elm-tooling": "^0.4.1"
