--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -18,6 +18,7 @@
         "Entities.Folder",
         "Entities.FolderCounts",
         "Entities.GenericNode",
+        "Entities.Markup",
         "Entities.Residence",
         "Main",
         "Pagination.Offset.Page",
