User wrapper type Aspect
for type safety and clarity

--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -27,6 +27,7 @@
         "Pagination.Relay.Connection",
         "Pagination.Relay.Page",
         "Pagination.Relay.Pagination",
+        "Types.Aspect",
         "Types.DebugInfo",
         "Types.Facet",
         "Types.Id",
