Keep ordering on list of fts- or facet-filters.
We introduce a new type `FilterList` for generic lists of filters based on aspects.

--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -29,6 +29,7 @@
         "Types.Aspect",
         "Types.DebugInfo",
         "Types.Facet",
+        "Types.FilterList",
         "Types.Id",
         "Types.Navigation",
         "Types.Needs",
