--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -34,7 +34,6 @@
         "Types.Navigation",
         "Types.Needs",
         "Types.Presentation",
-        "Types.Range",
         "Types.Route.Url",
         "Types.Route",
         "Types.SearchTerm",
@@ -49,6 +48,7 @@
         "UI.Facets",
         "UI.Icons",
         "UI.Tree",
+        "UI.Widgets.Breadcrumbs",
         "UI",
         "Utils.Graphql",
         "Utils.Html",
