--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -12,14 +12,14 @@
         "App",
         "Cache.Derive",
         "Cache",
-        "Config",
+        "Constants",
         "Entities.Document",
         "Entities.DocumentResults",
         "Entities.Folder",
         "Entities.FolderCounts",
         "Entities.GenericNode",
-        "Entities.Markup",
         "Entities.Markup.Parser",
+        "Entities.Markup",
         "Entities.Residence",
         "Main",
         "Pagination.Offset.Page",
@@ -27,17 +27,23 @@
         "Pagination.Relay.Page",
         "Pagination.Relay.Pagination",
         "Types.Aspect",
+        "Types.Config.FacetAspectConfig",
+        "Types.Config.FtsAspectConfig",
+        "Types.Config",
         "Types.DebugInfo",
-        "Types.Facet",
+        "Types.FacetValue",
         "Types.FilterList",
         "Types.Id",
+        "Types.Localization",
         "Types.Navigation",
         "Types.Needs",
         "Types.Presentation",
+        "Types.RearrangeableEditList",
         "Types.Route.Url",
         "Types.Route",
         "Types.SearchTerm",
         "Types.Selection",
+        "Types.ServerSetup",
         "Types",
         "UI.Article.Collection",
         "UI.Article.Details",
