--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -30,6 +30,7 @@
         "Types.Aspect",
         "Types.Config.FacetAspectConfig",
         "Types.Config.FtsAspectConfig",
+        "Types.Config.MasksConfig",
         "Types.Config",
         "Types.DebugInfo",
         "Types.FacetValue",
@@ -56,6 +57,7 @@
         "UI.Icons",
         "UI.Tree",
         "UI.Widgets.Breadcrumbs",
+        "UI.Widgets.LanguageSelect",
         "UI",
         "Utils.Graphql",
         "Utils.Html",
