--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -20,6 +20,7 @@
         "Entities.GenericNode",
         "Entities.Markup.Parser",
         "Entities.Markup",
+        "Entities.PageSequence",
         "Entities.Residence",
         "Main",
         "Pagination.Offset.Page",
