--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -28,6 +28,7 @@
         "Pagination.Relay.Page",
         "Pagination.Relay.Pagination",
         "Setup",
+        "Types.ApiData",
         "Types.Aspect",
         "Types.Config.FacetAspectConfig",
         "Types.Config.FtsAspectConfig",
@@ -51,6 +52,7 @@
         "UI.Article.Collection",
         "UI.Article.Details",
         "UI.Article.Generic",
+        "UI.Article.Iterator",
         "UI.Article.Listing",
         "UI.Article",
         "UI.Controls",
