Provide a more generic method to adjust the setup

--- a/frontend/elm-application.json
+++ b/frontend/elm-application.json
@@ -28,6 +28,7 @@
         "Pagination.Relay.Page",
         "Pagination.Relay.Pagination",
         "Setup",
+        "Types.AdjustmentToSetup",
         "Types.ApiData",
         "Types.Aspect",
         "Types.Config.FacetAspectConfig",
