--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,16 @@
     "elm"
   ],
   "scripts": {
-    "start": "node src/js/main.js"
+    "start": "ts-node src/ts/main.ts"
   },
   "dependencies": {
     "express": "^4.17.1",
     "postgraphile": "~4.12.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.9.4",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   }
 }
