--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,16 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.3.0",
+    "helmet": "^4.6.0",
+    "morgan": "^1.10.0",
     "postgraphile": "~4.12.3"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.9.4",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
