--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/helmet": "^4.0.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.9.4",
