--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
+    "express-slow-down": "^1.4.0",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
     "postgraphile": "~4.12.3"
@@ -33,6 +34,7 @@
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/express-slow-down": "^1.3.1",
     "@types/helmet": "^4.0.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.9.4",
