--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "start": "ts-node src/ts/main.ts"
   },
   "dependencies": {
+    "bunyan": "^1.8.15",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
@@ -31,6 +32,7 @@
     "postgraphile": "~4.12.3"
   },
   "devDependencies": {
+    "@types/bunyan": "^1.8.7",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
